kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-chat-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: quickchat.work.gd
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
